Name:          commodities
Version:       0.0.1
Synopsis:      Library for working with commoditized amounts and price histories
Description:   Library for working with commoditized amounts and price histories
License-file:  LICENSE
License:       BSD3
Author:        John Wiegley
Maintainer:    johnw@newartisans.com
Build-Type:    Simple
Cabal-Version: >= 1.10
Category:      Finance

source-repository head
    type:     git
    location: git://github.com/ledger/ledger4.git

library
    default-language: Haskell98
    ghc-options:      -Wall
    exposed-modules:
        Ledger.Balance
        Ledger.Commodity
        Ledger.Commodity.History
    build-depends:
        base                   >= 3 && < 5
      , PSQueue
      , comonad-transformers   >= 3.0.1
      , containers             >= 0.4
      , distributive           >= 0.3
      , keys                   >= 3.0.2
      , lens                   >= 3.7
      , linear                 >= 0.7
      , numbers                >= 2009.8.9
      , representable-functors >= 3.0.1
      , semigroups
      , semigroupoids          >= 3.0.2
      , text                   >= 0.11.2
      , thyme
      , transformers

test-suite doctests
    default-language: Haskell98
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    ghc-options:      -Wall
    hs-source-dirs:   test
    build-depends:
        base      >= 3   && < 5
      , directory >= 1.0 && < 1.3
      , doctest   >= 0.8 && <= 0.10
      , filepath  >= 1.3 && < 1.4

Test-suite test
    default-language: Haskell98
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   test
    build-depends: 
        base      >= 3   && < 5
      , commodities
      , QuickCheck
      , hspec
      , hspec-expectations
      , containers
      , lens
      , semigroups
      , thyme
      , transformers
