Name:                ledger-math
Version:             4.0.0
Synopsis:            TBD
Description:         TBD
License-file:        doc/LICENSE
License:             BSD3
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Source-repository head
  type: git
  location: git://github.com/ledger/ledger-math.git

test-suite doctests
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base == 4.*
    , directory >= 1.0 && < 1.3
    , doctest   >= 0.8 && <= 0.10
    , filepath  >= 1.3 && < 1.4
  ghc-options: -Wall -Werror
  hs-source-dirs: test

Library
  default-language: Haskell98
  ghc-options: -Wall -fno-warn-orphans -threaded
  build-depends:
      base            >= 3 && < 5
    , numbers         >= 2009.8.9
    , containers      >= 0.4
    , text            >= 0.11.2
  exposed-modules:
    Ledger
    Ledger.Amount
    Ledger.Commodity
    Ledger.Commodity.Pool
    Ledger.Commodity.Parse
    Ledger.Commodity.Print
    Ledger.Errors
    Ledger.Utils
    Ledger.Types
