Name:                ledger-parse
Version:             4.0.0
Synopsis:            TBD
Description:         TBD
License-file:        doc/LICENSE
License:             BSD3
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Source-repository head
  type: git
  location: git://github.com/ledger/ledger4.git

test-suite doctests
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base == 4.*
    , directory >= 1.0
    , doctest   >= 0.8
    , filepath  >= 1.3
  ghc-options: -Wall -Werror
  hs-source-dirs: test

Library
  default-language: Haskell98
  ghc-options: -Wall -fno-warn-orphans -threaded
  build-depends:
      base            >= 3 && < 5
    , system-filepath >= 0.4.7
    , text            >= 0.11.2
    , bytestring      >= 0.9.2.1
    , trifecta        >= 0.91
    , parsers         >= 0.5
  exposed-modules:
